--- a/public/index.html
+++ b/public/index.html
@@ -1,38 +1,85 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <title>PyBass</title>
+  <link rel="stylesheet" type="text/css" href="/static/css/py_bass.css" />
+  <!--
+  <script type="text/javascript" src="/javascript/jquery.js"></script>
+  -->
+  <script type="text/javascript" src="/static/javascript/py_bass.js"></script>
+  <script type="text/javascript" src="/static/javascript/raphael.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
+<script language="javascript" type="text/javascript">
+
+    window.onload = function() {
+
+        var pybass_data = [];
+
+        $.getJSON("http://pybass.com:8080/data",
+            { format: "json" },
+            function(data) {
+                pybass_data = data;
+            }
+        );
+
+        var fretboard_length = 1070;
+        var fretboard_width = 100;
+        var fretboard_paper = new Raphael(document.getElementById('canvas_container'), fretboard_length, fretboard_width);
+        var fretboard = new PyBass.Fretboard(fretboard_paper, fretboard_length, fretboard_width); 
+
+        var piano_length = 600;
+        var piano_width = 96;
+        var piano_paper = new Raphael(document.getElementById('piano_container'), piano_length, piano_width);
+        var piano = new PyBass.Piano(piano_paper, ${str(data['notes']) | n});
+
+        function drawScale(note_list, style) {
+            drawNotes(fretboard_paper, fretboard, note_list, style);
+        }
+
+        drawScale(${str(data['notes']) | n}, '${str(data['scale_display']) | n}');
+    }
+
+    function submitForm() {
+        document.scale_select.submit();
+    }
+
+</script>
+</head>
+<body>
+
+    <div id="logoheader">
+        <p id="logo">pybass.com</p>
+    </div>
+
+  <div class="dot" id="dot"></div>
+
+  <div id="bass">
+
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  </div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <div id="footer">
+      <p>
+        The tech: 
+        <a href="http://pylonshq.com/">Pylons</a>,
+        <a href="http://jquery.com/">JQuery</a>,
+        <a href="http://raphaeljs.com/">Raphaël</a> (<a href="http://www.w3.org/TR/SVG/paths.html#PathData">SVG</a>),
+        <a href="http://lilypond.org/">LilyPond</a>, and
+        <a href="http://code.google.com/p/mingus/">mingus</a>, and
+        <a href="http://mycolormusic.com/color-music/">color-music</a>.
+      </p>
+      <p>
+        <strong>Much</strong> more to come! Stay tuned (<a href="http://blog.tupleshop.com/rss">RSS</a>)...
+      </p>
+
+      <p id="copy">
+        <span>by Rob Orsini &copy; 2019 <a href="http://tupleshop.com">TupleShop</a>, Inc.</span>
+      </p>
+  </div>
+
+</body>
 </html>
