--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
 <div id="footer">
     <p id="copy">
-        <span> &copy; 2019 Rob Orsin <a href="http://tupleshop.com">TupleShop</a>, Inc.</span>
+        <span>Rob Orsini &copy; 2019 <a href="http://tupleshop.com">TupleShop</a>, Inc.</span>
     </p>
 </div>
 
